[package]
name = "conduit"
version = "0.1.0"
authors = ["grey <fairingrey@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-cors = "0.2"
actix-service = "1.0"
actix-http = "1.0"
actix-rt = "1.0"
blob-uuid = "0.4.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
http = "0.2"
jsonwebtoken = "7.1"
lazy_static = "1.4"
libreauth = "0.13"
log = "0.4"
num_cpus = "1.12"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slug = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.10"
validator_derive = "0.10"
